--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,18 @@
 .App-link {
   color: #09d3ac;
 }
+.bloco{
+  border: solid;
+  color: red;
+  background-color: yellowgreen;
+  /* text-align: center; */
+}
+
+
+.caixa{
+  
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
